# speech-toolformer

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
data/: test_dataset.jsonl  test_dataset_with_audio.jsonl  train_dataset.jsonl  train_dataset_with_audio.jsonl
prompts/: prompt_for_dataset_generation.md
py/: magic_paste.ipynb  tts_jsonl_data.py  upload_to_hf.py  validate_data.py
src/: main.py
src/core/: config.py  state.py
src/services/: clipboard.py  llm.py  player.py  recorder.py  stt.py  tts.py  unified_ai.py
src/ui/: overlay.py
