[project]
name = "magic-paste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.7",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.2",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "pyside6>=6.10.2",
    "pywin32>=311",
    "requests>=2.32.5",
    "scipy>=1.17.0",
]
